--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.038	- Apocalypse is now maintaining this module, thanks to Martijn for letting me do that!
+	- Lots of misc tweaks to POD/Build.PL/stuff :)
+	- Removed Module::Install in favor of Module::Build - yell at me if you need a Makefile.PL!
+
 0.037   - fix provides so PAUSE picks up our version again.
 0.0036  - Suppress redefinition warnings
         - Update our POE::Test::Loops requirement since it has new tests
