--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
 	- Removed Module::Install in favor of Module::Build - yell at me if you need a Makefile.PL!
 	- Added patch from RT#55279 to fix 'POE_EVENT_LOOP="Glib" perl -MPOE -e 1' bug
 	- Added patch from RT#53302 to fix filehandle watcher bug
+	- Bumped POE::Test::Loops prereq to 1.034 so we can use the new =begin/=end syntax and more tests!
 
 0.037   - fix provides so PAUSE picks up our version again.
 0.0036  - Suppress redefinition warnings
